# strava-analyser

./: .env.example  .gitignore  README.md  claude_desktop_config.json  implementation_plan.md  pyproject.toml  requirements.txt  task.md
docs/api/: activities.md  athletes.md  clubs.md  gears.md  models.md  overview.md  routes.md  segmentefforts.md  segments.md  streams.md  uploads.md
scripts/: get_refresh_token.py  scrape_strava_docs.py
strava_mcp/: __init__.py  config.py
strava_mcp/analysis/: __init__.py  aggregator.py  cross_query.py  heart_rate.py  performance.py  power.py  segment_analysis.py
strava_mcp/api/: dependencies.py  main.py
strava_mcp/api/routers/: activities.py  analysis.py  athlete.py  auth.py  clubs.py  gear.py  routes.py  segments.py  streams.py
strava_mcp/api/schemas/: __init__.py  activity_schemas.py  analysis_schemas.py  filter_schemas.py
strava_mcp/client/: auth.py  base.py
strava_mcp/mcp_server/: server.py
strava_mcp/mcp_server/tools/: activity_tools.py  analysis_tools.py  athlete_tools.py  auth_tools.py  club_tools.py  route_tools.py  segment_tools.py  stream_tools.py
strava_mcp/models/: __init__.py  activity.py  athlete.py  filters.py  misc.py  responses.py  segment.py
