[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "strava-mcp"
version = "0.1.0"
description = "Strava MCP server for Claude Desktop – exposes Strava data & analysis as MCP tools."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "strava-mcp contributors" }]
keywords = ["strava", "mcp", "claude", "llm", "fitness"]

dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "httpx",          # already a runtime dep, but explicit for tests
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
strava-mcp = "strava_mcp.mcp_server.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["strava_mcp*"]

# ── Ruff ──────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

# ── Mypy ──────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

# ── Pytest ────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
